Update: Fix: Same Layout Tablet n PC, Photobooth V1.1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Kamera -->
     <div class="camera-container">
-      <video id="video" autoplay playsinline></video>
+      <video id="video" autoplay playsinline style="transform: scaleX(-1);"></video>
       <div id="countdown" class="countdown"></div>
       <div class="flex">
           <div class="filter-controls">
